--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Home</title>
-    </title>
+    <title>WDD130 Home Page</title>
 </head>
 <body>
-<nav><a href="wwr/index.html">White Water Rafting Website</a>
-    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-    <a href="positioning.html">Positioning Activity</a>
-    <a href="#">Personal Website</a>
-    <a href="#">Personal Siteplan</a>
+    <h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a href="aboutme/index.html">About Me Page</a>             
+  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
 </nav>
-<h1>James Wright</h1>
-<img src="images/Me-in-front-of-tahiti-temple.jpg" alt="Picture of James in front of the Tahiti temple" width="400">
-<p>Hey, I'm James from Long Island, New York! I just got from my mission in French Polynesia a few months ago.
-    I speak French and Tahitian and I love learning languages. I have a goal of learning a new language a year. Right now I am focusing mostly on Portuguese and a little bit of Spanish.
-    I'm a marketing major. When I am not in school, I love playing pickleball and video games.
-    I play Super Smash Brothers competitively. There are regular events on campus so if that's also your thing, I would love to show you!
-</p>
+<h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
+</nav>  
+<p>James Wright - WDD130</p>
 </body>
 </html>
