navigation color changed and purpose statements

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,11 +20,14 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>We at Dry Oar know how hard it can be to find a good spot for everyone to have fun.
+      Our mission is to bring you the most exciting white water rafting spots in New York and learn more about them. </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Dry Oar aims to all families, no matter the age, and we can help you find your dream family vacation.
+      Fun for teh whole family!
+    </p>
     <!-- change this -->
 
     <hr />
@@ -67,25 +70,22 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Roboto, sans serif;
+      Heading Font: Roboto, sans-serif
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Helvetica, sans-serif;
+      Paragraph Font: Roboto Helvetica, sans-serif
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      The best Whitewater Rafting in New York, Dry Oar is on its way to bring you the best family experiences in white water rafting.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
       Trips vary from mild and great for families, to trips exclusively for
       physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, White Water Rafting Company can make it
+      adventures you are seeking, Dry Oar can make it
       happen for you.
     </p>
 
