--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -7,15 +7,29 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="downloads/dryoarlogo.png" alt="Dry Oar Logo with an Oar"></a>
+        <a href="index.html"><img class="dryoarlogo-img"src="" alt="Dry Oar Logo with an Oar"></a>
         <nav>
             <ul>
-                <li><a href="bookings.html">Book Now</a></li>
+                <li class="first-menu"><a href="bookings.html">Book Now</a></li>
                 <li><a href="deals.html">Deals</a></li>
                 <li><a href="rivers.html">Rivers</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
-    </header>
+</header>
+<main>
+    <div class="hero-banner">
+        <img src="river.png" alt="Riverton River">
+        <h1>This is a heading</h1>
+        <p1>This is a paragraph</p1>
+    </div>
+    <section>
+        <div class="card">
+              <img src="river1.webp" alt="Riverton River one">
+              <h2>River One</h2>
+              <p>River One is awesome because...</p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
