--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -28,8 +28,15 @@
               <img src="river1.webp" alt="Riverton River one">
               <h2>River One</h2>
               <p>River One is awesome because...</p>
-        </div>
+        </div> 
+COPY DIV CARD 8 TIMES
     </section>
 </main>
+<footer>
+    <div class="footer-card">
+        <h3><a href="history.html">History</a></h3>
+    </div>
+COPY THIS DIV CARD 4 TIMES
+</footer>
 </body>
 </html>
