--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
+    <link rel="stylesheet" href="styles/wireframe-style.css">
 </head>
 <body>
     <header>
