--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="styles/wireframe-style.css">
+    <link rel="stylesheet" href="wireframe-style.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,8 @@
         </nav>
 </header>
 <main>
-    <div class="hero-banner">
+    <div id="hero-banner">
+        <img id="hero-image" src="../../images/Me-in-front-of-tahiti-temple.jpg" alt=" me in front of the temple"
         <h1>This is a heading</h1>
         <p1>This is a paragraph</p1>
     </div>
