image with text

--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -20,7 +20,7 @@
 </header>
 <main>
     <div id="hero-banner">
-        <img id="hero-image" src="../../images/Me-in-front-of-tahiti-temple.jpg" alt=" me in front of the temple"
+        <img id="hero-image" src="../../images/Me-in-front-of-tahiti-temple.jpg" alt=" me in front of the temple">
         <h1>This is a heading</h1>
         <p1>This is a paragraph</p1>
     </div>
