--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -26,7 +26,7 @@
 
     <h3>Audience</h3>
     <p>Dry Oar aims to all families, no matter the age, and we can help you find your dream family vacation.
-      Fun for teh whole family!
+      Fun for the whole family!
     </p>
     <!-- change this -->
 
@@ -94,7 +94,7 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
+      <a href="wwr/wireframe.html">Home</a>
       <a href="#">Page2</a>
       <a href="#">Contact Us</a>
     </nav>
