--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title>Dry Oar Boating</title>
     <link rel="stylesheet" href="wireframe-style.css">
 </head>
 <body>
