logo on home page

--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="dryoarlogo-img"src="" alt="Dry Oar Logo with an Oar"></a>
+        <a href="site-plan-rafting.html"><img class="dryoarlogo-img" src="/images/dryoarlogo.png" alt="Dry Oar Logo with an Oar"></a>
         <nav>
             <ul>
                 <li class="first-menu"><a href="bookings.html">Book Now</a></li>
