--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -20,9 +20,9 @@
 </header>
 <main>
     <div id="hero-banner">
-        <img id="hero-image" src="../../images/Me-in-front-of-tahiti-temple.jpg" alt=" me in front of the temple">
-        <h1>This is a heading</h1>
-        <p1>This is a paragraph</p1>
+        <img id="hero-image" src="../../images/Family rafting NY 1.jpg" alt="Family rafting in a river">
+        <h1>You can find all the best white water rafting activities here!</h1>
+        <p1></p1>
     </div>
     <section>
         <div class="card">
