Now we're talkin

--- a/wwr/styles/wireframe.html
+++ b/wwr/styles/wireframe.html
@@ -26,18 +26,41 @@
     </div>
     <section>
         <div class="card">
-              <img src="river1.webp" alt="Riverton River one">
-              <h2>River One</h2>
-              <p>River One is awesome because...</p>
+            <h2>Intense Rivers</h2>
+            <p>Go on an awesome adventure</p>
+            <ul>
+                <li class="first-menu"><a href="bookings.html">Book Now</a></li>
+            </ul>
+              <img src="/images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
+              alt="Family Rafting on water">
         </div> 
-COPY DIV CARD 8 TIMES
+        <div class="card">
+            <h2>Rivers For The Whole Family</h2>
+            <p> Make memories with Dry Oar</p>
+            <img src="/images/black river whitewater rafting.jpg" width="460" height="246" 
+            alt="Family Rafting on water">
+      </div> 
+      <div class="card">
+        <h2>Camping</h2>
+        <p>Take some time to relax</p>
+        <img src="/images/Buffalo white water rafting.jpg" width="460" height="246" 
+        alt="Family Rafting on water">
+  </div> 
     </section>
 </main>
 <footer>
     <div class="footer-card">
-        <h3><a href="history.html">History</a></h3>
+        <h2>Join in on the fun!</h2>
     </div>
-COPY THIS DIV CARD 4 TIMES
+    <div class="footer-card">
+        <h3><a href="/wwr/site-plan-rafting.html">Site Plan</a></h3>
+    </div>
+    <div class="footer-card">
+        <h3><a href="">History</a></h3>
+    </div>
+    <div class="footer-card">
+        <h3>Dry Oar © 2024</h3>
+    </div>
 </footer>
 </body>
 </html>
