--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dry Oar Boating</title>
-    <link rel="stylesheet" href="wireframe-style.css">
+    <link rel="stylesheet" href="styles/wireframe-style.css">
 </head>
 <body>
     <header>
-        <a href="site-plan-rafting.html"><img class="dryoarlogo-img" src="/images/dryoarlogo.png" alt="Dry Oar Logo with an Oar"></a>
+        <a href="site-plan-rafting.html"><img class="dryoarlogo-img" src="images/dryoarlogo.png" alt="Dry Oar Logo with an Oar"></a>
         <nav>
             <ul>
                 <li class="first-menu"><a href="bookings.html">Book Now</a></li>
@@ -20,7 +20,7 @@
 </header>
 <main>
     <div id="hero-banner">
-        <img id="hero-image" src="../../images/Family rafting NY 1.jpg" alt="Family rafting in a river">
+        <img id="hero-image" src="images/Family rafting NY 1.jpg" alt="Family rafting in a river">
         <h1>You can find all the best white water rafting activities here!</h1>
         <p1></p1>
     </div>
@@ -31,19 +31,19 @@
             <ul>
                 <li class="first-menu"><a href="bookings.html">Book Now</a></li>
             </ul>
-              <img src="/images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
+              <img src="images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
               alt="Family Rafting on water">
         </div> 
         <div class="card">
             <h2>Rivers For The Whole Family</h2>
             <p> Make memories with Dry Oar</p>
-            <img src="/images/black river whitewater rafting.jpg" width="460" height="246" 
+            <img src="images/black river whitewater rafting.jpg" width="460" height="246" 
             alt="Family Rafting on water">
       </div> 
       <div class="card">
         <h2>Camping</h2>
         <p>Take some time to relax</p>
-        <img src="/images/Buffalo white water rafting.jpg" width="460" height="246" 
+        <img src="images/Buffalo white water rafting.jpg" width="460" height="246" 
         alt="Family Rafting on water">
   </div> 
     </section>
