--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -12,17 +12,16 @@
         <nav>
             <ul>
                 <li class="first-menu"><a href="bookings.html">Book Now</a></li>
-                <li><a href="deals.html">Deals</a></li>
-                <li><a href="rivers.html">Rivers</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="first-menu"><a href="deals.html">Deals</a></li>
+                <li class="first-menu"><a href="rivers.html">Rivers</a></li>
+                <li class="first-menu"><a href="contactus.html">Contact Us</a></li>
             </ul>
         </nav>
 </header>
 <main>
     <div id="hero-banner">
-        <img id="hero-image" src="images/Family rafting NY 1.jpg" alt="Family rafting in a river">
+        <img id="hero-image" src="images/Family-rafting-NY-1.jpg" alt="Family rafting in a river">
         <h1>You can find all the best white water rafting activities here!</h1>
-        <p1></p1>
     </div>
     <section>
         <div class="card">
@@ -37,13 +36,13 @@
         <div class="card">
             <h2>Rivers For The Whole Family</h2>
             <p> Make memories with Dry Oar</p>
-            <img src="images/black river whitewater rafting.jpg" width="460" height="246" 
+            <img src="images/black-river-whitewater-rafting.jpg" width="460" height="246" 
             alt="Family Rafting on water">
       </div> 
       <div class="card">
         <h2>Camping</h2>
         <p>Take some time to relax</p>
-        <img src="images/Buffalo white water rafting.jpg" width="460" height="246" 
+        <img src="images/Buffalo-white-water-rafting.jpg" width="460" height="246" 
         alt="Family Rafting on water">
   </div> 
     </section>
@@ -58,8 +57,19 @@
     <div class="footer-card">
         <h3><a href="">History</a></h3>
     </div>
+    <div class="social">
+        <a href="https://facebook.com">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://x.com">
+            <img src="images/x-logo.png" alt="x icon">
+        </a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.webp" alt="instagram icon">
+        </a>
+    </div>
     <div class="footer-card">
-        <h3>Dry Oar © 2024</h3>
+        <h3>Dry Oar © 2024 James Wright</h3>
     </div>
 </footer>
 </body>
