--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -48,6 +48,7 @@
     </section>
 </main>
 <footer>
+    <section>
     <div class="footer-card">
         <h2>Join in on the fun!</h2>
     </div>
@@ -71,6 +72,7 @@
     <div class="footer-card">
         <h3>Dry Oar © 2024 James Wright</h3>
     </div>
+    </section>
 </footer>
 </body>
 </html>
