--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -56,17 +56,17 @@
         <h3><a href="/wwr/site-plan-rafting.html">Site Plan</a></h3>
     </div>
     <div class="footer-card">
-        <h3><a href="">History</a></h3>
+        <h3><a href="#">History</a></h3>
     </div>
-    <div class="social">
-        <a href="https://facebook.com">
-            <img src="images/facebook.png" alt="fb icon">
+    <div class="row" style="width: 20%;">
+        <a href="https://facebook.com" target="_blank">
+        <div class="column"><img src="images/facebook.png" alt="fb icon" id="fb_image" style="width: 140%;"></div>
         </a>
-        <a href="https://x.com">
-            <img src="images/x-logo.png" alt="x icon">
+        <a href="https://x.com" target="_blank">
+        <div class="column"><img src="images/x-logo.png" alt="x icon" id="x_image" style="width: 140%;"></div>
         </a>
-        <a href="https://instagram.com">
-            <img src="images/instagram.webp" alt="instagram icon">
+        <a href="https://instagram.com" target="_blank">
+        <div class="column"><img src="images/instagram.webp" alt="instagram icon" id="insta_image" style="width: 90%;"></div>
         </a>
     </div>
     <div class="footer-card">
