--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/wireframe-style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a href="site-plan-rafting.html"><img class="dryoarlogo-img" src="images/dryoarlogo.png" alt="Dry Oar Logo with an Oar"></a>
         <nav>
@@ -27,9 +28,7 @@
         <div class="card">
             <h2>Intense Rivers</h2>
             <p>Go on an awesome adventure</p>
-            <ul>
-                <li class="first-menu"><a href="bookings.html">Book Now</a></li>
-            </ul>
+            <p class="first-menu"><a href="bookings.html">Book Now</a></p>
               <img src="images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
               alt="Family Rafting on water">
         </div> 
@@ -49,6 +48,7 @@
 </main>
 <footer>
     <section>
+        <div id="background"></div>
     <div class="footer-card">
         <h2>Join in on the fun!</h2>
     </div>
@@ -58,7 +58,7 @@
     <div class="footer-card">
         <h3><a href="#">History</a></h3>
     </div>
-    <div class="row" style="width: 20%;">
+    <div class="row" style="width: 20%;margin: auto;">
         <a href="https://facebook.com" target="_blank">
         <div class="column"><img src="images/facebook.png" alt="fb icon" id="fb_image" style="width: 140%;"></div>
         </a>
@@ -74,5 +74,6 @@
     </div>
     </section>
 </footer>
+</div>
 </body>
 </html>
