--- a/ice/ice5.html
+++ b/ice/ice5.html
@@ -9,12 +9,12 @@
 <body>
     <main>
     <div id="top">
-       <img src="/ice/images/ice5top.jpg">
+       <img src="ice/images/ice5top.jpg">
     </div>
     <div id="bottom">
-        <img id="banner-image" src="/ice/images/ice5desk.jpg">
-        <img id="banner-image" src="/ice/images/ice5graphic.png">
-        <img id="banner-image" src="/ice/images/ice5person.jpg">
+        <img id="banner-image" src="ice/images/ice5desk.jpg">
+        <img id="banner-image" src="ice/images/ice5graphic.png">
+        <img id="banner-image" src="ice/images/ice5person.jpg">
     </div>
     </main>
 </body>
