--- a/personal-siteplan/personal-siteplan.html
+++ b/personal-siteplan/personal-siteplan.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Best Vacation Spots in French Polynesia</title>
+    <link rel="stylesheet" href="styles/personal-siteplan.css">
 </head>
 <body>
         <header>
