--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -28,7 +28,7 @@
         <div class="card">
             <h2>Intense Rivers</h2>
             <p>Go on an awesome adventure</p>
-            <p class="first-menu"><a href="bookings.html">Book Now</a></p>
+            <p class="homepagefirstmenu"><a href="bookings.html">Book Now</a></p>
               <img src="images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
               alt="Family Rafting on water">
         </div> 
