hero banner changed

--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -21,7 +21,7 @@
 </header>
 <main>
     <div id="hero-banner">
-        <img id="hero-image" src="images/rafting-ny.jpg" alt="Family rafting in a river">
+        <img id="hero-image" src="images/New-York-rafting.jpg" alt="Family rafting in a river">
         <h1>You can find all the best white water rafting activities here!</h1>
     </div>
     <section>
