--- a/wwr/wireframe.html
+++ b/wwr/wireframe.html
@@ -9,70 +9,72 @@
 <body>
     <div id="content">
     <header>
-        <a href="site-plan-rafting.html"><img class="dryoarlogo-img" src="images/dryoarlogo.png" alt="Dry Oar Logo with an Oar"></a>
+        <a id="logo_link" href="index.html"><img class="logo" src="images/dryoarlogo.png" alt="Dry Oar Logo with an Oar"></a>
         <nav>
             <ul>
-                <li class="first-menu"><a href="bookings.html">Book Now</a></li>
-                <li class="first-menu"><a href="deals.html">Deals</a></li>
-                <li class="first-menu"><a href="rivers.html">Rivers</a></li>
+                <li class="first-menu"><a href="index.html">Home</a></li>
+                <li class="first-menu"><a href="#">Page 2</a></li>
+                <li class="first-menu"><a href="site-plan-rafting.html">Site Plan</a></li>
                 <li class="first-menu"><a href="contactus.html">Contact Us</a></li>
             </ul>
         </nav>
 </header>
-<main>
     <div id="hero-banner">
-        <h1>You can find all the best white water rafting activities here!</h1>
+    <div id="hero-box">
         <img id="hero-image" src="images/New-York-rafting.jpg" alt="Family rafting in a river">
     </div>
-    <section>
-        <div class="card">
-            <h2>Intense Rivers</h2>
+    <section id="hero-msg">
+        <h1 class="home-title">Have An Adventure</h1>
+        <h4>Make Memories with Dry Oar</h4>
+        <div class="button-box">
+            <a class="book" href="rates.html">Book Now</a>
+        </div>
+    </section>
+    </div>
+<main class="home-grid">
+    <section class="rapids-card">
+            <h2>Intense Rapids</h2>
             <p>Go on an awesome adventure</p>
-            <p class="homepagefirstmenu"><a href="bookings.html">Book Now</a></p>
-              <img src="images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
-              alt="Family Rafting on water">
-        </div> 
-        <div class="card">
-            <h2>Rivers For The Whole Family</h2>
+            <img class="card-img" src="images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
+              alt="Family rafting on water">
+    </section> 
+        <section class="rivers-card">
+            <h2>Rivers</h2>
             <p> Make memories with Dry Oar</p>
-            <img src="images/black-river-whitewater-rafting.jpg" width="460" height="246" 
-            alt="Family Rafting on water">
-      </div> 
-      <div class="card">
+            <img class="card-img" src="images/black-river-whitewater-rafting.jpg" width="460" height="246" 
+            alt="River">
+        </section> 
+      <section class="camping-card">
         <h2>Camping</h2>
-        <p>Take some time to relax</p>
-        <img src="images/Buffalo-white-water-rafting.jpg" width="460" height="246" 
-        alt="Family Rafting on water">
-  </div> 
+        <p>Take some time to relax with us</p>
+        <img class="card-img" src="images/camping.png" width="460" height="246" 
+        alt="Camping photo">
+      </section> 
+    <div id="mountains-background">
+        <img class="mountains" src="images/mountains.jpg" width="460" height="246"
+        alt="New York Mountains">
+    </div>
+    <section class="msg">
+        <h2>More Than Just The Thrill</h2>
+        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+        <a class='join' href="rivers.html">Join Us</a>
     </section>
 </main>
 <footer>
-    <section>
-        <div id="background"></div>
-    <div class="footer-card">
-        <h2>Join in on the fun!</h2>
-    </div>
-    <div class="footer-card">
-        <h3><a href="/wwr/site-plan-rafting.html">Site Plan</a></h3>
-    </div>
-    <div class="footer-card">
-        <h3><a href="#">History</a></h3>
-    </div>
-    <div class="row" style="width: 20%;margin: auto;">
+    <p>Dry Oar © 20XX - James Wright</p>
+    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
         <a href="https://facebook.com" target="_blank">
-        <div class="column"><img src="images/facebook.png" alt="fb icon" id="fb_image" style="width: 140%;"></div>
+            <img src="images/facebook.png" alt="fb icon" width="100" height="60">
         </a>
         <a href="https://x.com" target="_blank">
-        <div class="column"><img src="images/x-logo.png" alt="x icon" id="x_image" style="width: 140%;"></div>
+            <img src="images/x-logo.png" alt="x icon" width="100" height="60">
         </a>
         <a href="https://instagram.com" target="_blank">
-        <div class="column"><img src="images/instagram.webp" alt="instagram icon" id="insta_image" style="width: 90%;"></div>
+            <img src="images/instagram.webp" alt="instagram icon" width="100" height="60">
         </a>
     </div>
-    <div class="footer-card">
-        <h3>Dry Oar © 2024 James Wright</h3>
-    </div>
-    </section>
 </footer>
 </div>
 </body>
