week 8 rafting site plan

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -118,11 +118,10 @@
 
     <h3>Home</h3>
 
-    <img src="/images/dryoarlogo.png" alt="home page wireframe" />
+    <img src="images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
-
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/FAQ wireframe.png" alt="page 2 wireframe">
   </main>
 </body>
 
