subpage rafting site week 9

--- a/wwr/raftingsubpage1.html
+++ b/wwr/raftingsubpage1.html
@@ -13,52 +13,32 @@
         <nav>
             <ul>
                 <li class="first-menu"><a href="index.html">Home</a></li>
-                <li class="first-menu"><a href="raftingsubpage1.html">Page 2</a></li>
+                <li class="first-menu"><a href="#">Page 2</a></li>
                 <li class="first-menu"><a href="site-plan-rafting.html">Site Plan</a></li>
                 <li class="first-menu"><a href="contactus.html">Contact Us</a></li>
             </ul>
         </nav>
 </header>
-    <div id="hero-banner">
-    <div id="hero-box">
-        <img id="hero-image" src="images/New-York-rafting.jpg" alt="Family rafting in a river">
-    </div>
-    <section id="hero-msg">
-        <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Dry Oar</h4>
-        <div class="button-box">
-            <a class="book" href="rates.html">Book Now</a>
-        </div>
-    </section>
-    </div>
 <main class="home-grid">
-    <section class="rapids-card">
-            <h2>Intense Rapids</h2>
-            <p>Go on an awesome adventure</p>
-            <img class="card-img" src="images/Whitewater-Rafting-on-the-Hudson.png" width="460" height="246" 
-              alt="Family rafting on water">
-    </section> 
-        <section class="rivers-card">
-            <h2>Rivers</h2>
-            <p> Make memories with Dry Oar</p>
-            <img class="card-img" src="images/black-river-whitewater-rafting.jpg" width="460" height="246" 
-            alt="River">
-        </section> 
       <section class="camping-card">
         <h2>Camping</h2>
         <p>Take some time to relax with us</p>
         <img class="card-img" src="images/camping.png" width="460" height="246" 
         alt="Camping photo">
       </section> 
-    <div id="mountains-background">
-        <img class="mountains" src="images/mountains.jpg" width="460" height="246"
-        alt="New York Mountains">
-    </div>
-    <section class="msg">
-        <h2>More Than Just The Thrill</h2>
-        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class='join' href="rivers.html">Join Us</a>
+    <section class="msg2">
+        <h2>Come Camp with us!</h2>
+        <p>Don't stay cooped up in your home any longer! Enjoy the nature with our relaxing and spacious
+            campsites designed for the whole family! </p>
     </section>
+    <div class="subpageonecontent">
+        <h2>What Can I Do There?</h2>
+        <p>Come to our campsites. They include lots of space, a firepit, free access to wood to keep
+            that big flame burning, and river access so that the whole family can fish, kayak, and participate
+            in any water activities! Prices on campsite range from $50-$80 a night, depending on size and other features.
+            Did we mention that some of our campsites have hammocks? 
+        </p>
+    </div>
 </main>
 <footer>
     <p>Dry Oar © 20XX - James Wright</p>
